if BUILD_TESTS
SUBDIRS = . tests
endif

noinst_LIBRARIES = libs3fuse_crypto.a

libs3fuse_crypto_a_SOURCES = \
	aes_ctr_256_cipher.cc \
	aes_ctr_256_cipher.h \
	base64.cc \
	base64.h \
	cipher_state.cc \
	cipher_state.h \
	encoder.h \
	hash.h \
	hash_list.h \
	hex.cc \
	hex.h \
	hex_with_quotes.h \
	hmac_sha1.cc \
	hmac_sha1.h \
	md5.cc \
	md5.h \
	sha256.cc \
	sha256.h
