noinst_LIBRARIES = libs3fuse_objects.a

AM_CPPFLAGS += -I../

libs3fuse_objects_a_SOURCES = \
	directory.cc \
	directory.h \
	encrypted_file.cc \
	encrypted_file.h \
	file.cc \
	file.h \
	object.cc \
	object.h \
	reference_xattr.cc \
	reference_xattr.h \
	symlink.cc \
	symlink.h \
	value_xattr.cc \
	value_xattr.h \
	xattr.h
