noinst_LIBRARIES = libs3fuse_services.a

libs3fuse_services_a_SOURCES = \
	aws_file_transfer.cc \
	aws_file_transfer.h \
	aws_impl.cc \
	aws_impl.h \
	file_transfer.cc \
	file_transfer.h \
	gs_file_transfer.cc \
	gs_file_transfer.h \
	gs_impl.cc \
	gs_impl.h \
	impl.cc \
	impl.h \
	service.cc \
	service.h
