noinst_PROGRAMS = \
	request \
	static_list \
	static_list_multi

request_SOURCES = request.cc
request_LDADD = ../libs3fuse_base.a $(LDADD)

static_list_SOURCES = static_list.cc
static_list_LDADD = ../libs3fuse_base.a $(LDADD)

static_list_multi_SOURCES = static_list_multi.cc static_list_multi.h static_list_multi_1.cc static_list_multi_2.cc
static_list_multi_LDADD = ../libs3fuse_base.a $(LDADD)
