noinst_PROGRAMS = \
	lru_cache_map \
	request \
	static_list \
	static_list_multi

lru_cache_map_SOURCES = lru_cache_map.cc
lru_cache_map_LDADD = ../libs3fuse_base.a $(LDADD)

request_SOURCES = request.cc
request_LDADD = ../libs3fuse_base.a $(LDADD)

static_list_SOURCES = static_list.cc
static_list_LDADD = ../libs3fuse_base.a $(LDADD)

static_list_multi_SOURCES = static_list_multi.cc static_list_multi.h static_list_multi_1.cc static_list_multi_2.cc
static_list_multi_LDADD = ../libs3fuse_base.a $(LDADD)
