noinst_PROGRAMS = symmetric_key ciphers_file_par ciphers_file_seq ciphers_kat encoders encoders_varying hashes hash_list

ciphers_file_par_SOURCES = ciphers_file_par.cc
ciphers_file_par_LDADD = ../libs3fuse_crypto.a $(LDADD)

ciphers_file_seq_SOURCES = ciphers_file_seq.cc
ciphers_file_seq_LDADD = ../libs3fuse_crypto.a $(LDADD)

ciphers_kat_SOURCES = ciphers_kat.cc
ciphers_kat_LDADD = ../libs3fuse_crypto.a $(LDADD)

encoders_SOURCES = encoders.cc
encoders_LDADD = ../libs3fuse_crypto.a $(LDADD)

encoders_varying_SOURCES = encoders_varying.cc
encoders_varying_LDADD = ../libs3fuse_crypto.a $(LDADD)

hashes_SOURCES = hashes.cc
hashes_LDADD = ../libs3fuse_crypto.a $(LDADD)

hash_list_SOURCES = hash_list.cc
hash_list_LDADD = ../libs3fuse_crypto.a $(LDADD)

symmetric_key_SOURCES = symmetric_key.cc
symmetric_key_LDADD = ../libs3fuse_crypto.a $(LDADD)
