noinst_PROGRAMS = \
	aes_cbc_256_file \
	aes_ctr_256_file_par \
	aes_ctr_256_file_seq \
	aes_ctr_256_kat \
	decrypt_file \
	encoders \
	encoders_varying \
	encrypt_file \
	hashes \
	hash_file \
	hash_list \
	symmetric_key

aes_cbc_256_file_SOURCES = aes_cbc_256_file.cc
aes_cbc_256_file_LDADD = ../libs3fuse_crypto.a $(LDADD)

aes_ctr_256_file_par_SOURCES = aes_ctr_256_file_par.cc
aes_ctr_256_file_par_LDADD = ../libs3fuse_crypto.a $(LDADD)

aes_ctr_256_file_seq_SOURCES = aes_ctr_256_file_seq.cc
aes_ctr_256_file_seq_LDADD = ../libs3fuse_crypto.a $(LDADD)

aes_ctr_256_kat_SOURCES = aes_ctr_256_kat.cc
aes_ctr_256_kat_LDADD = ../libs3fuse_crypto.a $(LDADD)

decrypt_file_SOURCES = decrypt_file.cc
decrypt_file_LDADD = ../libs3fuse_crypto.a $(LDADD)

encoders_SOURCES = encoders.cc
encoders_LDADD = ../libs3fuse_crypto.a $(LDADD)

encoders_varying_SOURCES = encoders_varying.cc
encoders_varying_LDADD = ../libs3fuse_crypto.a $(LDADD)

encrypt_file_SOURCES = encrypt_file.cc
encrypt_file_LDADD = ../libs3fuse_crypto.a $(LDADD)

hashes_SOURCES = hashes.cc
hashes_LDADD = ../libs3fuse_crypto.a $(LDADD)

hash_file_SOURCES = hash_file.cc
hash_file_LDADD = ../libs3fuse_crypto.a $(LDADD)

hash_list_SOURCES = hash_list.cc
hash_list_LDADD = ../libs3fuse_crypto.a $(LDADD)

symmetric_key_SOURCES = symmetric_key.cc
symmetric_key_LDADD = ../libs3fuse_crypto.a $(LDADD)
